Users can now signup and signin. Viewing the home page still has issues. Controll doesnt look like its being passed into the controller. Need to find out why.

--- a/meerkat/www/templates/feed.html
+++ b/meerkat/www/templates/feed.html
@@ -1,5 +1,5 @@
 <ion-tabs class="tabs-icon-top">
-	<ion-tab title="My Feed" icon-on="ion-ios7-browsers">
+	<ion-tab title="My Feed!" icon-on="ion-ios-people" icon-off="ion-ios-people-outline" href="#/feed/list">
 		<icon-nav-view name="feed-list"></icon-nav-view>
 	</ion-tab>
 </ion-tabs>
