--- a/meerkat/www/templates/feed-list.html
+++ b/meerkat/www/templates/feed-list.html
@@ -1,13 +1,8 @@
 <ion-header-bar class="bar-positive">
 	<h1 class="title"> My Feed! </h1>
-	<button class="button button-clear" ng-click="logout()"> 
-		Logout 
-	</button>
 </ion-header-bar>
 
-<ion-content class="has-header padding" has-tabs="true" on-refresh="onRefresh()">
-	<ion-refresher ng-hide="noData" onRefresh="doRefresh('1')">	
-	</ion-refresher>
+<ion-content class="has-header padding" has-tabs="true">
 	<div class="card" ng-repeat="item in list">
 		<div class="item item-text-wrap">
 			<span>
