Fixed home page so that data is returned and propagated to teh screen in a list.

--- a/meerkat/www/templates/feed-list.html
+++ b/meerkat/www/templates/feed-list.html
@@ -3,7 +3,7 @@
 </ion-header-bar>
 
 <ion-content class="has-header padding" has-tabs="true">
-	<div class="card" ng-repeat="item in list">
+	<div class="card" ng-repeat="item in feed">
 		<div class="item item-text-wrap">
 			<span>
 				{{item.name}}
