The app is now able to create a new user, authenticate a user, use a jwt token to authenticate requests to the server for information, display promotions, and can even detect estimote beacons near the devicegit status! whoooooo

--- a/meerkat/www/templates/auth-signin.html
+++ b/meerkat/www/templates/auth-signin.html
@@ -15,4 +15,7 @@
 			<button class="button button-block button-positive" ng-click="validateUser()"> Sign In </button>
 		</label>
 	</div>
+
+	{{debugging.message}}
+	{{debugging.success}}
 </ion-content>
