--- a/meerkat/www/templates/feed-list.html
+++ b/meerkat/www/templates/feed-list.html
@@ -6,15 +6,44 @@
 	<div class="card" ng-repeat="item in feed">
 		<div class="item item-text-wrap">
 			<span>
-				{{item.name}}
+				<h1>{{item.title}}</h1>
+				{{ item.text }}
 			</span>
 		</div>
 	</div>
 	<div class="card">
 		<div class="item item-text-wrap" ng-show="noData">
 			<span>
-				No users! :(
+
+				No promotions nearby! :(
+				
 			</span>
 		</div>
+	</div>
+
+	<div>
+		<div> Beacons: :) </div>
+		<div class="list">
+	        <div class="item" ng-repeat="(key, value) in beacons">
+	            <div class="row">
+	                <div class="col truncate">
+	                    {{value.uuid}}
+	                </div>
+	            </div>
+	            <div class="row">
+	                <div class="col">
+	                    major: {{value.major}}
+	                </div>
+	                <div class="col">
+	                    minor: {{value.minor}}
+	                </div>
+	            </div>
+	            <div class="row">
+	                <div class="col">
+	                    {{value.proximity}}
+	                </div>
+	            </div>
+	        </div>
+	    </div>
 	</div>
 </ion-content>
