--- a/meerkat/www/css/style.css
+++ b/meerkat/www/css/style.css
@@ -19,3 +19,25 @@
 {
 	margin-right: 35px;
 }
+.meerkat-promotion-title {
+	color: white; 
+	font: bold 24px/45px Helvetica, Sans-Serif; 
+	letter-spacing: -1px;  
+	background: rgb(0, 0, 0); /* fallback color */
+	background: rgba(0, 0, 0, 0.7);
+	padding: 10px; 
+
+    position: absolute; 
+	top: 50%; 
+	left: 0; 
+	width: 100%; 
+}
+
+.meerkat-promotion-image {
+	width: 100%;
+	height: 100%;
+}
+
+.meerkat-share-button {
+	padding-right: 15px;
+}
